-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8290809 | 11.0.17 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8311944 | 8u481 | Daniel Skantz | P4 | Resolved | Fixed | b01 |
Test case : tools/jdeprscan/tests/jdk/jdeprscan/TestRelease.java
OS : Crash seen on Windows-x64 fastdebug build
Is it a Regression: Intermittent failure (can't say)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/runtime/compilationPolicy.cpp:332), pid=8620, tid=4588
# assert(!m->was_never_executed()) failed: don't reset to 0 -- could be mistaken for never-executed
#
# JRE version: Java(TM) SE Runtime Environment 18.9 (11.0.13+2) (fastdebug build 11.0.13-ea+2-LTS-294)
# Java VM: Java HotSpot(TM) 64-Bit Server VM 18.9 (fastdebug 11.0.13-ea+2-LTS-294, compiled mode, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_gc_lock_malloc_malloclock04_TestDescription_java\scratch\0\hs_err_pid8620.mdmp
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
OS : Crash seen on Windows-x64 fastdebug build
Is it a Regression: Intermittent failure (can't say)
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/runtime/compilationPolicy.cpp:332), pid=8620, tid=4588
# assert(!m->was_never_executed()) failed: don't reset to 0 -- could be mistaken for never-executed
#
# JRE version: Java(TM) SE Runtime Environment 18.9 (11.0.13+2) (fastdebug build 11.0.13-ea+2-LTS-294)
# Java VM: Java HotSpot(TM) 64-Bit Server VM 18.9 (fastdebug 11.0.13-ea+2-LTS-294, compiled mode, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_gc_lock_malloc_malloclock04_TestDescription_java\scratch\0\hs_err_pid8620.mdmp
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
- backported by
-
JDK-8290809 vmTestbase/gc/lock/malloc/malloclock04/TestDescription.java crashes intermittently
-
- Resolved
-
-
JDK-8311944 vmTestbase/gc/lock/malloc/malloclock04/TestDescription.java crashes intermittently
-
- Resolved
-
- duplicates
-
JDK-8271012 vmTestbase/gc/ArrayJuggle/Juggle29/TestDescription.java crashed
-
- Closed
-