8271010: vmTestbase/gc/lock/malloc/malloclock04/TestDescription.java crashes intermittently

Reviewed-by: mbaesken, stuefe